@@ -21,7 +21,7 @@
 			<url>${app.developer.url}</url>
 			<roles>
 				<role>${app.developer.role.lead}</role>
-			    <role>${app.developer.role.arch}</role>
+				<role>${app.developer.role.arch}</role>
 			</roles>
 		</developer>
 		<developer>
@@ -50,23 +50,25 @@
 	</licenses>
 	<properties>
 		<stable_version_for_jpackage>1.1.0.0</stable_version_for_jpackage>
+        <jpackage.icon>${project.basedir}/src/main/resources/icons/64x64.ico</jpackage.icon>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<javaVersion>23</javaVersion>
+		<javaVersion>25</javaVersion>
 		<maven.build.timestamp.format>dd.MM.yyy - HH:mm</maven.build.timestamp.format>
 		<maven.compiler.source>${javaVersion}</maven.compiler.source>
 		<maven.compiler.target>${javaVersion}</maven.compiler.target>
 		<maven.compiler.release>${javaVersion}</maven.compiler.release>
-		
+
 		<app.owner>The Spirit</app.owner>
-        <app.developer.id>mastertomspirit</app.developer.id>
-        <app.developer.email>tomspirit@spiritscorp.network</app.developer.email>
-        <app.developer.url>https://github.com/mastertomspirit</app.developer.url>
-        
-        <app.description.short>Hochperformante Anwendung zur Dateisynchronisation und Duplikaterkennung mit automatisiertem Job-Scheduling.</app.description.short>
+		<app.developer.id>mastertomspirit</app.developer.id>
+		<app.developer.email>tomspirit@spiritscorp.network</app.developer.email>
+		<app.developer.url>https://github.com/mastertomspirit</app.developer.url>
+
+		<app.description.short>Hochperformante Anwendung zur Dateisynchronisation und Duplikaterkennung mit automatisiertem Job-Scheduling.</app.description.short>
 		<app.developer.role.lead>Lead Developer</app.developer.role.lead>
-	    <app.developer.role.arch>Software Architect</app.developer.role.arch>
-	    <app.developer.role.ui>UI Engineer</app.developer.role.ui>
-    
+		<app.developer.role.arch>Software Architect</app.developer.role.arch>
+		<app.developer.role.ui>UI Engineer</app.developer.role.ui>
+
 		<!-- Plugin versions -->
 		<pl_git_commit_id>10.0.0</pl_git_commit_id>
 		<pl_license>5.0.0</pl_license>
@@ -80,6 +82,7 @@
 		<pl_failsafe>3.6.0-M1</pl_failsafe>
 		<pl_jlink.version>3.3.0</pl_jlink.version>
 		<pl_jpackage.version>0.1.5</pl_jpackage.version>
+		<pl_jpackage_asm.version>9.10.1</pl_jpackage_asm.version>
 		<pl_resources.version>3.5.0</pl_resources.version>
 		<pl_assembly.version>3.8.0</pl_assembly.version>
 		<pl_jxr.version>3.6.0</pl_jxr.version>
@@ -95,7 +98,7 @@
 
 		<!-- Dependency versions -->
 		<dep_surefire_tree>1.5.1</dep_surefire_tree>
-		<dep_javafx_controls.version>25</dep_javafx_controls.version>
+		<dep_javafx_controls.version>26.0.1</dep_javafx_controls.version>
 		<dep_ikonli_javafx.version>12.4.0</dep_ikonli_javafx.version>
 		<dep_ikonli_materialdesign2..version>12.4.0</dep_ikonli_materialdesign2..version>
 		<dep_jakarta.json.api.version>2.1.3</dep_jakarta.json.api.version>
@@ -158,12 +161,12 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>${pl_checkstyle.version}</version>
 				<dependencies>
-       				<dependency>
-           				<groupId>com.puppycrawl.tools</groupId>
-      		    		<artifactId>checkstyle</artifactId>
-        	    		<version>${pl_checkstyle_puppycrawl.version}</version>
-             		</dependency>
-    			</dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>${pl_checkstyle_puppycrawl.version}</version>
+					</dependency>
+				</dependencies>
 				<configuration>
 					<configLocation>buildConfig/checkstyle.xml</configLocation>
 					<consoleOutput>true</consoleOutput>
@@ -190,7 +193,7 @@
 					<skip>true</skip>
 					<properties>
 						<owner>${app.owner}</owner>
-			            <email>${app.developer.email}</email>
+						<email>${app.developer.email}</email>
 					</properties>
 					<licenseSets>
 						<licenseSet>
@@ -337,6 +340,11 @@
 						</manifestEntries>
 					</archive>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+					</execution>
+				</executions>
 			</plugin>
 			<!-- Creates an "Uber-JAR" (Fat-JAR) and provides dependency relocation to prevent classpath conflicts. -->
 			<plugin>
@@ -450,7 +458,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<phase>prepare-package</phase>
+						<phase>test</phase>
 						<goals>
 							<goal>integration-test</goal>
 							<goal>verify</goal>
@@ -494,7 +502,7 @@
 					<dependency>
 						<groupId>org.ow2.asm</groupId>
 						<artifactId>asm</artifactId>
-						<version>9.10.1</version>
+						<version>${pl_jpackage_asm.version}</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -513,9 +521,11 @@
 							<copyright>GPL 3.0</copyright>
 							<description>${app.description.short}</description>
 							<vendor>${app.owner}</vendor>
-							<icon>src/main/resources/icons/64x64.ico</icon>
+							<icon>${jpackage.icon}</icon>
 							<module>de.spiritscorp.DataSync/de.spiritscorp.DataSync.Main</module>
-							<javaoptions>-Dfile.encoding=UTF-8 -Xms32m -Xmx4096m -Dapp.instance.name="${project.artifactId}_v${project.version}"</javaoptions>
+							<javaoptions>-Dfile.encoding=UTF-8 -Xms32m -Xmx4096m</javaoptions>
+							<javaoptions> -Dapp.instance.name=${project.artifactId}_v${project.version}</javaoptions>
+							<javaoptions>--enable-native-access=javafx.graphics</javaoptions>
 						</configuration>
 					</execution>
 				</executions>
@@ -533,7 +543,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory> target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
+							<outputDirectory>target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
 							<resources>
 								<resource>
 									<directory>target/maven-jlink/default</directory>
@@ -551,7 +561,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory> target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
+							<outputDirectory>target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
 							<resources>
 								<resource>
 									<directory>target/classes</directory>
@@ -587,7 +597,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory> target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
+							<outputDirectory>target/${project.artifactId}/jar/${project.artifactId}</outputDirectory>
 							<resources>
 								<resource>
 									<directory>target</directory>
@@ -605,7 +615,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory> target/${project.artifactId}/image/${project.artifactId}</outputDirectory>
+							<outputDirectory>target/${project.artifactId}/image/${project.artifactId}</outputDirectory>
 							<resources>
 								<resource>
 									<directory>target/classes</directory>
@@ -633,7 +643,7 @@
 						<configuration>
 							<finalName>${project.artifactId}-jar</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
-							<outputDirectory> ${project.build.directory}/${project.artifactId}/jar</outputDirectory>
+							<outputDirectory>${project.build.directory}/${project.artifactId}/jar</outputDirectory>
 							<descriptors>
 								<descriptor>buildConfig/assembly/zip-full-jar.xml</descriptor>
 							</descriptors>
@@ -648,7 +658,7 @@
 						<configuration>
 							<finalName>${project.artifactId}-image</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
-							<outputDirectory> ${project.build.directory}/${project.artifactId}/image</outputDirectory>
+							<outputDirectory>${project.build.directory}/${project.artifactId}/image</outputDirectory>
 							<descriptors>
 								<descriptor>buildConfig/assembly/zip-jpackage.xml</descriptor>
 							</descriptors>
@@ -777,20 +787,20 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>${pl_project_info.version}</version>
 				<reportSets>
-                <reportSet>
-                    <reports>
-                        <report>dependencies</report>
-                        <report>index</report>
-                        <report>summary</report>
-                        <report>licenses</report>
-                        <report>scm</report>
-                        <report>issue-management</report>
-                        <report>plugins</report>
-                        <report>plugin-management</report>
-                        <report>team</report>
-                   </reports>
-                </reportSet>
-            </reportSets>
+					<reportSet>
+						<reports>
+							<report>dependencies</report>
+							<report>index</report>
+							<report>summary</report>
+							<report>licenses</report>
+							<report>scm</report>
+							<report>issue-management</report>
+							<report>plugins</report>
+							<report>plugin-management</report>
+							<report>team</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 
 			<plugin>
@@ -923,4 +933,32 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+		<!-- Profil for Windows -->
+		<profile>
+			<id>os-windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<jpackage.icon>${project.basedir}/src/main/resources/icons/64x64.ico</jpackage.icon>
+			</properties>
+		</profile>
+
+		<!-- Profil for Linux -->
+		<profile>
+			<id>os-linux</id>
+			<activation>
+				<os>
+					<family>unix</family>
+					<name>linux</name>
+				</os>
+			</activation>
+			<properties>
+				<jpackage.icon>${project.basedir}/src/main/resources/icons/64x64.png</jpackage.icon>
+			</properties>
+		</profile>
+	</profiles>
 </project>
